Moved info btn to appropriate places and fixed overlap issue

--- a/app/src/styles/permit-lookup.scss
+++ b/app/src/styles/permit-lookup.scss
@@ -28,6 +28,9 @@
 .info-title {
   font-weight: bold;
 }
+.label-with-info {
+  padding-right: 0.2em;
+}
 .permit-lookup-info-btn {
   position: relative;
   background-repeat: no-repeat;
